fix: Jetty 10 compatibility (#10)
Cherry pick Jetty 10 fixes from newer Atmosphere 
Pick fix for atmosphere#2455 and Pick atmosphere#2353
Refactor Base64 coding using commons-codec
Update dependencies to JDK11 compatibility
Remove cobertura